@@ -48,6 +48,9 @@
 	13107 Western_Outlaw		Need correct HIT and ASPD Rate
 	----
 ========================
+08/04
+	* Added missing /blackmith packet action to packet_db.txt
+	* Removed "eathena's custom equipped mobs" from mob&skill db [ultramage]
 08/01
 	* Added the remaining arrow craftings [Playtester]
 	* Added some of the new arrow craftings for testing purposes [Playtester]
